--- a/SalesWebMvc/Views/Sellers/Index.cshtml
+++ b/SalesWebMvc/Views/Sellers/Index.cshtml
@@ -1,8 +1,7 @@
-﻿
-@model IEnumerable<SalesWebMvc.Models.Seller>
+﻿@model IEnumerable<SalesWebMvc.Models.Seller>
 
 @{
-    ViewData["Title"] = "Seller";
+    ViewData["Title"] = "Sellers";
 }
 
 <h2>@ViewData["Title"]</h2>
@@ -47,8 +46,9 @@
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
+
         }
     </tbody>
-            
-    </table>
+
+</table>
 
